# SDG2000X

./: .gitignore  README.md  pyproject.toml
example/: RFID.py
src/: SDG2000X.py  Waveform.py
