[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SDG2000X"
version = "0.0.1"
description = "Build and deploy signals to Siglent SDG2000X AWG"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyvisa",
    "matplotlib",
]
